# cuda-oxide

./: .gitignore  Cargo.toml
crates/cargo-oxide/src/: commands.rs  main.rs
crates/cuda-core/src/: device_buffer.rs
crates/cuda-core/tests/: device_buffer.rs
crates/cuda-device/: README.md
crates/cuda-device/src/: barrier.rs  clc.rs  cluster.rs  lib.rs  ptx.rs  tcgen05.rs  warp.rs  wmma.rs
crates/cuda-macros/: README.md
crates/cuda-macros/src/: lib.rs  ptx_asm.rs
crates/cuda-macros/tests/: ptx_asm.rs
crates/cuda-macros/tests/compile_fail/: ptx_asm_constraint_comma.rs  ptx_asm_constraint_comma.stderr  ptx_asm_input_limit.rs  ptx_asm_input_limit.stderr  ptx_asm_input_output_constraint.rs  (+19 more)
crates/dialect-llvm/src/: export.rs
crates/dialect-mir/: README.md
crates/dialect-mir/src/: rust_intrinsics.rs
crates/dialect-mir/tests/: ops_test.rs
crates/dialect-nvvm/: Cargo.toml  README.md
crates/dialect-nvvm/tests/: ops_test.rs
crates/llvm-export/src/: lib.rs
crates/llvm-export/tests/: export_test.rs
crates/mir-importer/src/: pipeline.rs
crates/mir-lower/src/: lowering.rs
crates/mir-lower/tests/: lowering_test.rs
crates/rustc-codegen-cuda/: Cargo.toml  README.md  STATUS.md
crates/rustc-codegen-cuda/examples/gemm_sol_iteration_8/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/gemm_sol_iteration_8/bench/: README.md  build.sh  cublas_correctness_test.py  cublas_sol_bench.py  cublaslt_bench.c  cutlass_sol_bench.py
crates/rustc-codegen-cuda/examples/gemm_sol_iteration_8/src/: kernels.rs  main.rs
crates/rustc-codegen-cuda/examples/mem_swap/: Cargo.toml
crates/rustc-codegen-cuda/examples/mem_swap/src/: main.rs
crates/rustc-codegen-cuda/examples/shuffle_64/: Cargo.toml
crates/rustc-codegen-cuda/examples/shuffle_64/src/: main.rs
crates/rustc-codegen-cuda/src/: collector.rs  device_codegen.rs
cuda-oxide-book/advanced/: matrix-multiply-accelerators.md
cuda-oxide-book/appendix/: api-quick-reference.md  supported-features.md
cuda-oxide-book/compiler/: lowering-pipeline.md
cuda-oxide-book/gpu-programming/: error-handling-and-debugging.md
scripts/: debug-smoketest.sh  smoketest.sh
(+72 files in other folders)
