# Frozen standalone example of gemm-sol-autocuda iteration 8. The package name
# determines the emitted PTX filename loaded by src/main.rs.

[package]
name = "gemm_sol_iteration_8"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# `[workspace]` marks this as a standalone crate, not part of any parent
# workspace. cargo-oxide keys standalone mode off this.
[workspace]

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
half = "2.4"
