[package]
name = "mem_swap"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Regression for core::mem::swap / mem::replace on the device.
# Build/run with:
#   cargo oxide run mem_swap
#
# Before the fix, these lowered to the compiler intrinsic
# `core::intrinsics::typed_swap_nonoverlapping`, which has no MIR body and
# bailed with "rustc intrinsic ... is not yet supported on the device".

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
