[package]
name = "shuffle_64"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates 64-bit warp shuffles (u64 / f64) — `shfl.sync` is
# 32-bit only, so each lowers to inline PTX that shuffles two halves. Build with:
#   cargo oxide run shuffle_64

[dependencies]
# Device-side intrinsics (warp::shuffle_u64, warp::shuffle_xor_f64, ...)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
